[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/UI/SimpleGameOver.gd" id="SimpleGameOver_script"]

[node name="SimpleGameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("SimpleGameOver_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0

[node name="GameOverTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üíÄ GAME OVER üíÄ"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Final Score: 0"
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="WaveLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Wave Reached: 1"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üîÑ PLAY AGAIN"
theme_override_font_sizes/font_size = 18

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "üè† MAIN MENU"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "‚ùå QUIT"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]